; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/fifo/extr_base.c_nvkm_fifo_uevent_ctor.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/engine/fifo/extr_base.c_nvkm_fifo_uevent_ctor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_object = type { i32 }
%struct.nvkm_notify = type { i32, i32, i64 }
%union.anon = type { %struct.nvif_notify_uevent_req }
%struct.nvif_notify_uevent_req = type { i32 }

@ENOSYS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nvkm_object*, i8*, i32, %struct.nvkm_notify*)* @nvkm_fifo_uevent_ctor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvkm_fifo_uevent_ctor(%struct.nvkm_object* %0, i8* %1, i32 %2, %struct.nvkm_notify* %3) #0 {
  %5 = alloca %struct.nvkm_object*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.nvkm_notify*, align 8
  %9 = alloca %union.anon*, align 8
  %10 = alloca i32, align 4
  store %struct.nvkm_object* %0, %struct.nvkm_object** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.nvkm_notify* %3, %struct.nvkm_notify** %8, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = bitcast i8* %11 to %union.anon*
  store %union.anon* %12, %union.anon** %9, align 8
  %13 = load i32, i32* @ENOSYS, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %10, align 4
  %15 = load i32, i32* %10, align 4
  %16 = load %union.anon*, %union.anon** %9, align 8
  %17 = bitcast %union.anon* %16 to %struct.nvif_notify_uevent_req*
  %18 = getelementptr inbounds %struct.nvif_notify_uevent_req, %struct.nvif_notify_uevent_req* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @nvif_unvers(i32 %15, i8** %6, i32* %7, i32 %19)
  store i32 %20, i32* %10, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %29, label %22

22:                                               ; preds = %4
  %23 = load %struct.nvkm_notify*, %struct.nvkm_notify** %8, align 8
  %24 = getelementptr inbounds %struct.nvkm_notify, %struct.nvkm_notify* %23, i32 0, i32 0
  store i32 4, i32* %24, align 8
  %25 = load %struct.nvkm_notify*, %struct.nvkm_notify** %8, align 8
  %26 = getelementptr inbounds %struct.nvkm_notify, %struct.nvkm_notify* %25, i32 0, i32 1
  store i32 1, i32* %26, align 4
  %27 = load %struct.nvkm_notify*, %struct.nvkm_notify** %8, align 8
  %28 = getelementptr inbounds %struct.nvkm_notify, %struct.nvkm_notify* %27, i32 0, i32 2
  store i64 0, i64* %28, align 8
  br label %29

29:                                               ; preds = %22, %4
  %30 = load i32, i32* %10, align 4
  ret i32 %30
}

declare dso_local i32 @nvif_unvers(i32, i8**, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
